<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_samba_ll_margin_top">

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/item_samba_120dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/servers"
            android:textSize="@dimen/item_samba_tv_size15" />

        <EditText
            android:id="@+id/editServer"
            android:layout_width="@dimen/item_samba_270dp"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:hint="@string/server1"
            android:inputType="phone"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/item_samba_120dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/folder_position"
            android:textSize="@dimen/item_samaba_size_20" />

        <EditText
            android:id="@+id/position"
            android:layout_width="@dimen/item_samba_270dp"
            android:layout_height="wrap_content"
            android:hint="@string/work_path"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textName"
            android:layout_width="@dimen/item_samba_120dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/str_name"
            android:textSize="@dimen/item_samaba_size_20" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="@dimen/item_samba_270dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name1"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textpass"
            android:layout_width="@dimen/item_samba_120dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/str_pass"
            android:textSize="@dimen/item_samaba_size_20" />

        <EditText
            android:id="@+id/editpass"
            android:layout_width="@dimen/item_samba_270dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_pass1"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/item_samba_120dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/dispaly"
            android:textSize="@dimen/item_samba_tv_size15" />

        <EditText
            android:id="@+id/editdisplay"
            android:layout_width="@dimen/item_samba_270dp"
            android:layout_height="wrap_content"
            android:hint="@string/server_name"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/add_shortcut"
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_samba_70dp"
        android:checked="true"
        android:focusable="false"
        android:clickable="false"
        android:nextFocusDown="@+id/myOkBut"
        android:text="@string/add_shortcut" />

    <LinearLayout
        android:layout_width="@dimen/item_samba_ll_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_samba_20dp"
        android:layout_marginTop="@dimen/item_samba_20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/item_samba_100dp"
            android:layout_height="@dimen/item_samba_40dp"
            android:layout_marginLeft="@dimen/item_samba_64dp"
            android:layout_marginRight="@dimen/item_samba_20dp"
            android:background="@drawable/butselector"
            android:text="@string/ok"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/item_samba_100dp"
            android:layout_height="@dimen/item_samba_40dp"
            android:background="@drawable/butselector"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
