<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/item_nfs_add_400dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_nfs_add_30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/item_nfs_add_100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/servers"
            android:textSize="@dimen/item_nfs_add_15sp" />

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="@dimen/item_nfs_add_280dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_nfs_add_20dp"
            android:digits="1234567890."
            android:hint="@string/ip_address1"
            android:inputType="phone"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_nfs_add_7dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/item_nfs_add_100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/folder_position"
            android:textSize="@dimen/item_nfs_add_15sp" />

        <EditText
            android:id="@+id/et_path"
            android:layout_width="@dimen/item_nfs_add_280dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/item_nfs_add_20dp"
            android:hint="@string/server_folder1"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/add_shortcut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_nfs_add_70dp"
        android:checked="true"
        android:focusable="false"
        android:clickable="false"
        android:text="@string/add_shortcut" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_nfs_add_20dp"
        android:layout_marginBottom="@dimen/item_nfs_add_30dp"
         >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/item_nfs_add_100dp"
            android:layout_height="@dimen/item_nfs_add_40dp"
            android:layout_marginLeft="@dimen/item_nfs_add_24dp"
            android:layout_marginRight="@dimen/item_nfs_add_20dp"
            android:background="@drawable/butselector"
            android:text="@string/ok"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/item_nfs_add_100dp"
            android:layout_height="@dimen/item_nfs_add_40dp"
            android:background="@drawable/butselector"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>